# BirdSimulations

./: README.md  ba.md  draw_temperature_map.py  main.py  requirements.txt  show_heatmap.py  temperature_integration_guide.md  to-do-list.md
controller/: simulation.py
model/: bird.py  fruit.py  fruit_functions.py  steering.py
model/weather/: __init__.py  checklist_integration.md  doc_Cpp.md  weather_model.md  weather_module_guide.md
model/weather/cpp/: CMakeLists.txt  FORMULAS.md
model/weather/cpp/include/: solver.h  solver_seq.h  temperature_field.h  wind_field.h
model/weather/cpp/src/: main.cpp  python_bindings.cpp  solver.cpp  solver_seq.cpp  temperature_field.cpp  wind_field.cpp
model/weather/docs/: temperature_wind_access_guide.md
model/weather/main/: __init__.py  utils.py  weather_integration.py
model/weather/python/: __init__.py  ascii_test.py  check_pybind11.py  cpp_weather.cp310-win_amd64.pyd  cpp_weather_interface.py  direct_test.py  dynamic_viz_fixed.py  logic_optimized.py  logic_test.py  mp_test.py  optimized_mp.py  par_result.npy  realtime_simulation.py  simple_test.py  simplified_test.py  simulation_fixed.py  simulation_test.py  test_cpp_module.py  weather_multiprocessing.py
model/weather/python/core/: README.md  __init__.py  cpp_weather.cp310-win_amd64.pyd  cpp_weather_interface.py
model/weather/python/performance/: README.md  __init__.py  logic_optimized.py  optimized_mp.py  seq_result.npy  simulation_fixed.py
model/weather/python/utils/: README.md  __init__.py  build_cpp_module.py  debug_checklist.md
model/weather/python/visualization/: README.md  __init__.py  dynamic_viz.py  realtime_simulation.py
model/weather/visualization/: __init__.py  heatmap_renderer.py
temperature_visualization/: __init__.py  constants.py  legend.py  renderer.py  updater.py  utils.py
tests/: test_vector.py
utils/: config.py  vector.py
view/: renderer.py
